--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,9 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@types/jest": "^29.5.14",
-    "@types/testing-library__jest-dom": "^5.14.9"
+    "@types/testing-library__jest-dom": "^5.14.9",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17"
   }
 }
