--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,12 +6,14 @@
     "@types/node": "^20.3.1",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "frappe-gantt": "^0.6.1",
     "lucide-react": "^0.469.0",
     "radix-ui": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.15.0",
+    "sass": "^1.83.1",
     "typescript": "^4.9.5",
     "web-vitals": "^4.2.4"
   },
@@ -42,6 +44,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
+    "@types/frappe-gantt": "^0.6.4",
     "@types/jest": "^29.5.14",
     "@types/testing-library__jest-dom": "^5.14.9",
     "autoprefixer": "^10.4.20",
