--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "@types/node": "^20.3.1",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
-    "frappe-gantt": "^0.6.1",
+    "frappe-gantt": "^1.0.0",
+    "@types/frappe-gantt": "^0.6.4",
     "lucide-react": "^0.469.0",
     "radix-ui": "^1.0.1",
     "react": "^18.2.0",
@@ -45,11 +46,12 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
-    "@types/frappe-gantt": "^0.6.4",
     "@types/jest": "^29.5.14",
     "@types/testing-library__jest-dom": "^5.14.9",
     "autoprefixer": "^10.4.20",
+    "css-loader": "^7.1.2",
     "postcss": "^8.4.49",
+    "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.17"
   }
 }
